# skabase

./: CMakeLists.txt
src/: CMakeLists.txt
src/src/Base/: SkaConstants.h
src/src/Base/Containers/: insertion_indexed_map.h  order_indexed_string_map.h
src/src/Base/DynamicLibrary/: DynamicLibrary.h  FunctionCache.h
src/src/Base/DynamicLibrary/OSSpecific/: DynamicLibraryUnix.h  DynamicLibraryWindows.h
src/src/Base/Functions/: FunctionUtils.h
src/src/Base/IO/Files/: FileUtils.h
src/src/Base/IO/Files/OSSpecific/: FileUtilsUnix.cpp  FileUtilsUnix.h  FileUtilsWin.cpp  FileUtilsWin.h
src/src/Base/IO/Readers/: IniReader.cpp  IniReader.h
src/src/Base/Patterns/: Observable.h  Observer.h
src/src/Base/Serialization/: SerializationMemoryException.cpp  SerializationMemoryException.h  SerializerErrorData.h  SerializerNatives.h  SerializerOutput.h  SerializerOutputData.h  SerializerSafeZone.h  SerializerType.h  SerializerValidator.cpp  SerializerValidator.h
src/src/Base/Task/: Task.h
src/src/Base/Values/: MovableNonCopyable.h
src/src/Base/Values/Numbers/: NumberUtils.cpp
src/src/Base/Values/Strings/: StringUtils.cpp
src/src/Base/__internalConfig/: LoggerConfig.cpp  LoggerConfig.h
test/: CMakeLists.txt
test/src/: Serializer_SafeMemoryZone_test.cpp  Serializer_Type_test.cpp  main.cpp
